--- a/index.html
+++ b/index.html
@@ -2,108 +2,52 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no" />
-  <title>القنوات الرياضية – روابط m3u8 مباشرة</title>
+  <title>القنوات الرياضية</title>
   <style>
-    :root{ --safe-pad:32px; --radius:22px; --focus-ring:5px; --accent:#ffc107; --v-gap:16px; --max-w:600px; }
-    @media (min-width:2560px){ :root{ --safe-pad:44px; --max-w:1100px; } }
-    html,body{
-      margin:0;height:100%;background:#212121;color:#fafafa;
-      font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Kufi Arabic","Noto Sans Arabic",Arial,sans-serif;
-      -webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;overscroll-behavior:none;
-    }
-    .page{ min-height:100%; box-sizing:border-box; padding:var(--safe-pad); display:flex; flex-direction:column; align-items:center; }
-    header{ text-align:center; margin-bottom:14px; }
-    header h1{ margin:0 0 4px; font-size:clamp(28px,4.5vw,62px); font-weight:800; }
-    header .sub{ opacity:.85; font-size:clamp(16px,2.2vw,24px); }
-    .stack{ width:min(100%,var(--max-w)); margin-inline:auto; display:flex; flex-direction:column; gap:var(--v-gap); }
-    .tile{ position:relative; display:block; overflow:hidden; border-radius:var(--radius); background:transparent; outline:none; }
-    .thumb{ display:block; width:100%; height:auto; object-fit:contain; background:transparent; border-radius:inherit; }
-    .tile.link:focus{ outline:none; }
-    .tile.link:focus-visible::after,.tile.link[tabindex="0"]:focus::after{
-      content:""; position:absolute; inset:0; border:var(--focus-ring) solid var(--accent); border-radius:inherit; pointer-events:none;
-    }
-    .banner{ pointer-events:none; }
-    footer{ text-align:center; margin-top:20px; opacity:.9; font-weight:700; font-size:clamp(16px,2vw,22px); }
-    main{ width:100%; scroll-behavior:auto; overscroll-behavior:contain; }
-    a,.tile{ -webkit-tap-highlight-color: rgba(0,0,0,0); }
+    :root{ --pad:28px; --gap:16px; --max-w:700px; --radius:20px; }
+    html,body{ margin:0; height:100%; background:#121212; color:#fafafa; font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Kufi Arabic","Noto Sans Arabic",Arial,sans-serif; }
+    .page{ min-height:100%; box-sizing:border-box; padding:var(--pad); display:flex; flex-direction:column; align-items:center; }
+    .stack{ width:min(100%,var(--max-w)); display:flex; flex-direction:column; gap:var(--gap); }
+    .tile{ display:block; border-radius:var(--radius); overflow:hidden; background:transparent; }
+    .thumb{ width:100%; height:auto; display:block; object-fit:cover; }
+    /* لا عناوين ولا تعليمات ولا ريموت */
   </style>
 </head>
 <body>
   <div class="page">
-    <header>
-      <h1>القنوات الرياضية – روابط m3u8 مباشرة</h1>
-      <div class="sub">اضغط على القناة لفتح رابط m3u8 مباشرة في أي مشغّل يدعمها (الجوال أو الكمبيوتر)</div>
-    </header><main>
-  <div class="stack" id="stack">
-    <!-- لافتة افتتاحية -->
-    <div class="tile banner" aria-hidden="true" role="presentation">
-      <img class="thumb" loading="lazy" src="https://www4.0zz0.com/2024/02/01/09/100522793.png" alt="" />
-    </div>
-
-    <!-- القنوات 1 - 5 -->
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483688.m3u8" aria-label="قناة 1" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/VWaMw/l" alt="قناة 1" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483657.m3u8" aria-label="قناة 2" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/QJQKW/l" alt="قناة 2" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483660.m3u8" aria-label="قناة 3" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/9NjMe/l" alt="قناة 3" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483663.m3u8" aria-label="قناة 4" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/YJqzY/l" alt="قناة 4" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483667.m3u8" aria-label="قناة 5" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/7qOgo/l" alt="قناة 5" /></a>
-
-    <!-- 11 - 14 -->
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483669.m3u8" aria-label="قناة 11" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/edGM0/l" alt="قناة 11" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483672.m3u8" aria-label="قناة 12" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/OJea8/l" alt="قناة 12" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483675.m3u8" aria-label="قناة 13" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/jxBMz/l" alt="قناة 13" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483678.m3u8" aria-label="قناة 14" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/LV1xG/l" alt="قناة 14" /></a>
-
-    <!-- لافتة وسط -->
-    <div class="tile banner" aria-hidden="true" role="presentation">
-      <img class="thumb" loading="lazy" src="https://www4.0zz0.com/2024/02/01/09/194995613.png" alt="" />
-    </div>
-
-    <!-- 6 - 10 -->
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689531.m3u8" aria-label="قناة 6" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/za2GV/l" alt="قناة 6" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689534.m3u8" aria-label="قناة 7" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/ZPe4w/l" alt="قناة 7" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689535.m3u8" aria-label="قناة 8" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/XA56X/l" alt="قناة 8" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689536.m3u8" aria-label="قناة 9" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/GVzGg/l" alt="قناة 9" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689539.m3u8" aria-label="قناة 10" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/y2Lmq/l" alt="قناة 10" /></a>
-
-    <!-- 15 - 17 -->
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689557.m3u8" aria-label="قناة 15" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/8e0yy/l" alt="قناة 15" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689559.m3u8" aria-label="قناة 16" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/32YWj/l" alt="قناة 16" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689546.m3u8" aria-label="قناة 17" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/oxe8O/l" alt="قناة 17" /></a>
-
-    <!-- لافتة -->
-    <div class="tile banner" aria-hidden="true" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/4aJYv/l" alt="" /></div>
-
-    <!-- 18 - 20 -->
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/69195.m3u8" aria-label="قناة 18" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/GVl1N/l" alt="قناة 18" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/69196.m3u8" aria-label="قناة 19" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/KXOPZ/l" alt="قناة 19" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/178390.m3u8" aria-label="قناة 20" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/QJoZx/l" alt="قناة 20" /></a>
-
-    <!-- لافتة -->
-    <div class="tile banner" aria-hidden="true" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/QJoPW/l" alt="" /></div>
-
-    <!-- 21 - 23 -->
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/222044.m3u8" aria-label="قناة 21" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/nx59x/l" alt="قناة 21" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/222045.m3u8" aria-label="قناة 22" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/LVdjx/l" alt="قناة 22" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/222047.m3u8" aria-label="قناة 23" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/8e0aO/l" alt="قناة 23" /></a>
-
-    <!-- لافتة -->
-    <div class="tile banner" aria-hidden="true" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/rWdY7/l" alt="" /></div>
-
-    <!-- 24 - 25 -->
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/362201.m3u8" aria-label="قناة 24" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/wWodN/l" alt="قناة 24" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/362204.m3u8" aria-label="قناة 25" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/g8veK/l" alt="قناة 25" /></a>
-
-    <!-- لافتة -->
-    <div class="tile banner" aria-hidden="true" role="presentation"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/489277181.png" alt="" /></div>
-
-    <!-- 26 - 28 -->
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/763544.m3u8" aria-label="قناة 26" rel="external"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/812637220.png" alt="قناة 26" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/763547.m3u8" aria-label="قناة 27" rel="external"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/480587354.png" alt="قناة 27" /></a>
-    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/763550.m3u8" aria-label="قناة 28" rel="external"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/738428476.png" alt="قناة 28" /></a>
+    <main>
+      <div class="stack" role="list">
+        <!-- لافتة/صورة القناة فقط: الضغط يفتح m3u8 مباشرة -->
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483688.m3u8"><img class="thumb" src="https://i.suar.me/VWaMw/l" alt="قناة 1"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483657.m3u8"><img class="thumb" src="https://i.suar.me/QJQKW/l" alt="قناة 2"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483660.m3u8"><img class="thumb" src="https://i.suar.me/9NjMe/l" alt="قناة 3"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483663.m3u8"><img class="thumb" src="https://i.suar.me/YJqzY/l" alt="قناة 4"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483667.m3u8"><img class="thumb" src="https://i.suar.me/7qOgo/l" alt="قناة 5"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689531.m3u8"><img class="thumb" src="https://i.suar.me/za2GV/l" alt="قناة 6"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689534.m3u8"><img class="thumb" src="https://i.suar.me/ZPe4w/l" alt="قناة 7"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689535.m3u8"><img class="thumb" src="https://i.suar.me/XA56X/l" alt="قناة 8"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689536.m3u8"><img class="thumb" src="https://i.suar.me/GVzGg/l" alt="قناة 9"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689539.m3u8"><img class="thumb" src="https://i.suar.me/y2Lmq/l" alt="قناة 10"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483669.m3u8"><img class="thumb" src="https://i.suar.me/edGM0/l" alt="قناة 11"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483672.m3u8"><img class="thumb" src="https://i.suar.me/OJea8/l" alt="قناة 12"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483675.m3u8"><img class="thumb" src="https://i.suar.me/jxBMz/l" alt="قناة 13"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483678.m3u8"><img class="thumb" src="https://i.suar.me/LV1xG/l" alt="قناة 14"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689557.m3u8"><img class="thumb" src="https://i.suar.me/8e0yy/l" alt="قناة 15"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689559.m3u8"><img class="thumb" src="https://i.suar.me/32YWj/l" alt="قناة 16"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689546.m3u8"><img class="thumb" src="https://i.suar.me/oxe8O/l" alt="قناة 17"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/69195.m3u8"><img class="thumb" src="https://i.suar.me/GVl1N/l" alt="قناة 18"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/69196.m3u8"><img class="thumb" src="https://i.suar.me/KXOPZ/l" alt="قناة 19"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/178390.m3u8"><img class="thumb" src="https://i.suar.me/QJoZx/l" alt="قناة 20"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222044.m3u8"><img class="thumb" src="https://i.suar.me/nx59x/l" alt="قناة 21"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222045.m3u8"><img class="thumb" src="https://i.suar.me/LVdjx/l" alt="قناة 22"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222047.m3u8"><img class="thumb" src="https://i.suar.me/8e0aO/l" alt="قناة 23"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/362201.m3u8"><img class="thumb" src="https://i.suar.me/wWodN/l" alt="قناة 24"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/362204.m3u8"><img class="thumb" src="https://i.suar.me/g8veK/l" alt="قناة 25"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763544.m3u8"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/812637220.png" alt="قناة 26"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763547.m3u8"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/480587354.png" alt="قناة 27"/></a>
+        <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763550.m3u8"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/738428476.png" alt="قناة 28"/></a>
+      </div>
+    </main>
   </div>
-</main>
-
-<footer>Abu Faris TV Sport</footer>
-
-  </div>  <!-- لا يوجد أي سكربت: روابط مباشرة فقط، بلا ريموت وبلا مشغّل داخلي --></body>
+</body>
 </html>
