--- a/index.html
+++ b/index.html
@@ -16,68 +16,68 @@
   <div class="page">
     <main>
       <div class="stack" role="list">
-        <!-- لافتة افتتاحية -->
+        <!-- لافتة افتتاحية (صورة فقط) -->
         <div class="tile"><img class="thumb" src="https://www4.0zz0.com/2024/02/01/09/100522793.png" alt="لافتة افتتاحية"/></div><!-- القنوات 1 - 5 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483688.m3u8"><img class="thumb" src="https://i.suar.me/VWaMw/l" alt="قناة 1"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483657.m3u8"><img class="thumb" src="https://i.suar.me/QJQKW/l" alt="قناة 2"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483660.m3u8"><img class="thumb" src="https://i.suar.me/9NjMe/l" alt="قناة 3"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483663.m3u8"><img class="thumb" src="https://i.suar.me/YJqzY/l" alt="قناة 4"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483667.m3u8"><img class="thumb" src="https://i.suar.me/7qOgo/l" alt="قناة 5"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483688.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/VWaMw/l" alt="قناة 1"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483657.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/QJQKW/l" alt="قناة 2"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483660.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/9NjMe/l" alt="قناة 3"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483663.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/YJqzY/l" alt="قناة 4"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483667.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/7qOgo/l" alt="قناة 5"/></a>
 
-    <!-- لافتة وسط -->
+    <!-- لافتة وسط (صورة فقط) -->
     <div class="tile"><img class="thumb" src="https://www4.0zz0.com/2024/02/01/09/194995613.png" alt="لافتة وسط"/></div>
 
     <!-- 6 - 10 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689531.m3u8"><img class="thumb" src="https://i.suar.me/za2GV/l" alt="قناة 6"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689534.m3u8"><img class="thumb" src="https://i.suar.me/ZPe4w/l" alt="قناة 7"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689535.m3u8"><img class="thumb" src="https://i.suar.me/XA56X/l" alt="قناة 8"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689536.m3u8"><img class="thumb" src="https://i.suar.me/GVzGg/l" alt="قناة 9"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689539.m3u8"><img class="thumb" src="https://i.suar.me/y2Lmq/l" alt="قناة 10"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689531.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/za2GV/l" alt="قناة 6"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689534.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/ZPe4w/l" alt="قناة 7"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689535.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/XA56X/l" alt="قناة 8"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689536.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/GVzGg/l" alt="قناة 9"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689539.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/y2Lmq/l" alt="قناة 10"/></a>
 
     <!-- 11 - 14 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483669.m3u8"><img class="thumb" src="https://i.suar.me/edGM0/l" alt="قناة 11"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483672.m3u8"><img class="thumb" src="https://i.suar.me/OJea8/l" alt="قناة 12"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483675.m3u8"><img class="thumb" src="https://i.suar.me/jxBMz/l" alt="قناة 13"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483678.m3u8"><img class="thumb" src="https://i.suar.me/LV1xG/l" alt="قناة 14"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483669.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/edGM0/l" alt="قناة 11"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483672.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/OJea8/l" alt="قناة 12"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483675.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/jxBMz/l" alt="قناة 13"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483678.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/LV1xG/l" alt="قناة 14"/></a>
 
-    <!-- لافتة -->
+    <!-- لافتة (صورة فقط) -->
     <div class="tile"><img class="thumb" src="https://i.suar.me/4aJYv/l" alt="لافتة"/></div>
 
     <!-- 15 - 17 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689557.m3u8"><img class="thumb" src="https://i.suar.me/8e0yy/l" alt="قناة 15"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689559.m3u8"><img class="thumb" src="https://i.suar.me/32YWj/l" alt="قناة 16"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689546.m3u8"><img class="thumb" src="https://i.suar.me/oxe8O/l" alt="قناة 17"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689557.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/8e0yy/l" alt="قناة 15"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689559.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/32YWj/l" alt="قناة 16"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689546.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/oxe8O/l" alt="قناة 17"/></a>
 
-    <!-- لافتة -->
+    <!-- لافتة (صورة فقط) -->
     <div class="tile"><img class="thumb" src="https://i.suar.me/4aJYv/l" alt="لافتة"/></div>
 
     <!-- 18 - 20 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/69195.m3u8"><img class="thumb" src="https://i.suar.me/GVl1N/l" alt="قناة 18"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/69196.m3u8"><img class="thumb" src="https://i.suar.me/KXOPZ/l" alt="قناة 19"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/178390.m3u8"><img class="thumb" src="https://i.suar.me/QJoZx/l" alt="قناة 20"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/69195.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/GVl1N/l" alt="قناة 18"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/69196.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/KXOPZ/l" alt="قناة 19"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/178390.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/QJoZx/l" alt="قناة 20"/></a>
 
-    <!-- لافتة -->
+    <!-- لافتة (صورة فقط) -->
     <div class="tile"><img class="thumb" src="https://i.suar.me/QJoPW/l" alt="لافتة"/></div>
 
     <!-- 21 - 23 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222044.m3u8"><img class="thumb" src="https://i.suar.me/nx59x/l" alt="قناة 21"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222045.m3u8"><img class="thumb" src="https://i.suar.me/LVdjx/l" alt="قناة 22"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222047.m3u8"><img class="thumb" src="https://i.suar.me/8e0aO/l" alt="قناة 23"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222044.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/nx59x/l" alt="قناة 21"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222045.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/LVdjx/l" alt="قناة 22"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222047.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/8e0aO/l" alt="قناة 23"/></a>
 
-    <!-- لافتة -->
+    <!-- لافتة (صورة فقط) -->
     <div class="tile"><img class="thumb" src="https://i.suar.me/rWdY7/l" alt="لافتة"/></div>
 
     <!-- 24 - 25 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/362201.m3u8"><img class="thumb" src="https://i.suar.me/wWodN/l" alt="قناة 24"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/362204.m3u8"><img class="thumb" src="https://i.suar.me/g8veK/l" alt="قناة 25"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/362201.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/wWodN/l" alt="قناة 24"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/362204.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://i.suar.me/g8veK/l" alt="قناة 25"/></a>
 
-    <!-- لافتة -->
+    <!-- لافتة (صورة فقط) -->
     <div class="tile"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/489277181.png" alt="لافتة"/></div>
 
     <!-- 26 - 28 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763544.m3u8"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/812637220.png" alt="قناة 26"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763547.m3u8"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/480587354.png" alt="قناة 27"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763550.m3u8"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/738428476.png" alt="قناة 28"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763544.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/812637220.png" alt="قناة 26"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763547.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/480587354.png" alt="قناة 27"/></a>
+    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763550.m3u8" type="application/x-mpegURL"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/738428476.png" alt="قناة 28"/></a>
   </div>
 </main>
 
